--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <link rel="stylesheet" href="scripts\main.css">
+    <link rel="stylesheet" href="styles\main.css">
     <title>unendlicherBlog</title>
   </head>
   <body>
