--- a/index.html
+++ b/index.html
@@ -5,18 +5,20 @@
     <title>unendlicherBlog</title>
   </head>
   <body>
-    <div class="menu_bar" id="menu_bar">
+    <div id="navbar">
       <!-- Languge options missing -->
-      <div class="menu_bar_entry" id="menu_bar_entry_logo">
-        logo
-      </div>
-      <div class="menu_bar_entry" id="menu_bar_entry_home">Home</div>
-      <div class="menu_bar_entry" id="menu_bar_entry_about">About</div>
-      <div class="menu_bar_entry" id="menu_bar_entry_search">
-        Search
-      </div>
-      <div class="menu_bar_entry" id="menu_bar_entry_german">DE</div>
-      <div class="menu_bar_entry" id="menu_bar_entry_english">EN</div>
+      <ul>
+        <li><div class="menu_bar_entry" id="menu_bar_entry_logo">
+          logo
+          </div></li>
+        <li><<div class="menu_bar_entry" id="menu_bar_entry_home">Home</div></li>
+        <li><<div class="menu_bar_entry" id="menu_bar_entry_about">About</div></li>
+        <li><<div class="menu_bar_entry" id="menu_bar_entry_search">
+          Search
+        </div></li>
+        <li><<div class="menu_bar_entry" id="menu_bar_entry_german">DE</div></li>
+        <li><<div class="menu_bar_entry" id="menu_bar_entry_english">EN</div></li>
+      </ul>
     </div>
     <div class="text_block" id="text_block">
       fetch
