--- a/index.html
+++ b/index.html
@@ -5,20 +5,18 @@
     <title>unendlicherBlog</title>
   </head>
   <body>
-    <div id="navbar">
+    <div id="menu_bar">
       <!-- Languge options missing -->
-      <ul>
-        <li><div class="menu_bar_entry" id="menu_bar_entry_logo">
+        <div class="menu_bar_entry_active" id="menu_bar_entry_logo">
           logo
           </div></li>
-        <li><<div class="menu_bar_entry" id="menu_bar_entry_home">Home</div></li>
-        <li><<div class="menu_bar_entry" id="menu_bar_entry_about">About</div></li>
-        <li><<div class="menu_bar_entry" id="menu_bar_entry_search">
+        <div class="menu_bar_entry" id="menu_bar_entry_home">Home</div>
+        <div class="menu_bar_entry" id="menu_bar_entry_about">About</div>
+        <div class="menu_bar_entry" id="menu_bar_entry_search">
           Search
-        </div></li>
-        <li><<div class="menu_bar_entry" id="menu_bar_entry_german">DE</div></li>
-        <li><<div class="menu_bar_entry" id="menu_bar_entry_english">EN</div></li>
-      </ul>
+        </div>
+        <div class="menu_bar_entry" id="menu_bar_entry_german">DE</div>
+        <div class="menu_bar_entry" id="menu_bar_entry_english">EN</div>
     </div>
     <div class="text_block" id="text_block">
       fetch
