--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>unendlicherBlog</title>
   </head>
   <body>
-    <div id="menu_bar">
+    <div class="menu_bar">
       <!-- Languge options missing -->
         <div class="menu_bar_entry_active" id="menu_bar_entry_logo">
           logo
