--- a/index.html
+++ b/index.html
@@ -5,18 +5,11 @@
     <title>unendlicherBlog</title>
   </head>
   <body>
-    <div class="menu_bar">
-      <!-- Languge options missing -->
-        <div class="menu_bar_entry_active" id="menu_bar_entry_logo">
-          logo
-          </div></li>
-        <div class="menu_bar_entry" id="menu_bar_entry_home">Home</div>
-        <div class="menu_bar_entry" id="menu_bar_entry_about">About</div>
-        <div class="menu_bar_entry" id="menu_bar_entry_search">
-          Search
-        </div>
-        <div class="menu_bar_entry" id="menu_bar_entry_german">DE</div>
-        <div class="menu_bar_entry" id="menu_bar_entry_english">EN</div>
+    <div class="topnav">
+      <a class="active" href="#home">Home</a>
+      <a href="#news">News</a>
+      <a href="#contact">Contact</a>
+      <a href="#about">About</a>
     </div>
     <div class="text_block" id="text_block">
       fetch
