Changed index.html and main.css I gave the css a much more modern look.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,16 @@
       <a href="#news">News</a>
       <a href="#contact">Contact</a>
       <a href="#about">About</a>
+      <div class"space_1"> 
+      <p>search: </p>
+      <input class="search_imput" type="text" id="search" name="search ...">
+      <div class="space_2">
+      <a href="#about">DE</a>
+      <a href="#about">EN</a>
     </div>
     <div class="text_block" id="text_block">
-      fetch
+      <h1>Title</h1>
+      <p>lorem</p>
     </div>
   </body>
 </html>
